SpringBoot+Kafka+Jsoup+HTMLUnit+WebMagic 添加页面截图

--- a/antifraud_reptile_service/src/main/resources/application.yml
+++ b/antifraud_reptile_service/src/main/resources/application.yml
@@ -51,6 +51,6 @@ logging:
   level:
     org:
       springframework:
-        kafka: INFO # 日志太多了，所以我们限制只打印 ERROR 级别
+        kafka: error # 日志太多了，所以我们限制只打印 ERROR 级别
       apache:
-        kafka: INFO # 日志太多了，所以我们限制只打印 ERROR 级别
+        kafka: error # 日志太多了，所以我们限制只打印 ERROR 级别
